--- a/notebook/chapter8.ipynb
+++ b/notebook/chapter8.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,9 +390,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/torchvision/datapoints/__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
+      "/usr/local/lib/python3.10/dist-packages/torchvision/transforms/v2/__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
+      "/usr/local/lib/python3.10/dist-packages/torch/_utils.py:803: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "  return self.fget.__get__(instance, owner)()\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -491,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,8 +869,580 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 乱数シードの設定を行う\n",
+    "from transformers.trainer_utils import set_seed\n",
+    "\n",
+    "set_seed(42)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### データセットの読み込みと前処理"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using custom data configuration default\n",
+      "Reusing dataset jsnli (/root/.cache/huggingface/datasets/llm-book___jsnli/default/1.0.0/b59ac9cb188ddb68dc451bae1b33ac9ebe501a5d2c41f17c5ec06ad0621186d7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "# JSNLIの訓練セットを読み込む\n",
+    "jsnli_dataset = load_dataset(\"llm-book/jsnli\", split=\"train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset({\n",
+      "    features: ['premise', 'hypothesis', 'label'],\n",
+      "    num_rows: 533005\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# JSNLIの訓練セットの形式と事例数を確認\n",
+    "print(jsnli_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hypothesis': '男 は 魔法 の ショー の ため に ナイフ を 投げる 行為 を 練習 して い ます 。',\n",
+      " 'label': 'neutral',\n",
+      " 'premise': 'ガレージ で 、 壁 に ナイフ を 投げる 男 。'}\n",
+      "{'hypothesis': '女性 が 畑 で 踊って い ます 。',\n",
+      " 'label': 'contradiction',\n",
+      " 'premise': '茶色 の ドレス を 着た 女性 が ベンチ に 座って い ます 。'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "# JSNLIの訓練セットの内容を確認\n",
+    "pprint(jsnli_dataset[0])\n",
+    "pprint(jsnli_dataset[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import random\n",
+    "from typing import Iterator\n",
+    "\n",
+    "# JSNLI訓練セットから、前提文とラベルごとに仮説文をまとめたdictを作成する\n",
+    "premise2hypotheses = {}\n",
+    "\n",
+    "primises = jsnli_dataset[\"premise\"] # 前提文\n",
+    "hypotheses = jsnli_dataset[\"hypothesis\"] # 仮説文\n",
+    "labels = jsnli_dataset[\"label\"] # ラベル\n",
+    "\n",
+    "for premise, hypothesis, label in zip(primises, hypotheses, labels):\n",
+    "    if premise not in premise2hypotheses:\n",
+    "        premise2hypotheses[premise] = {\n",
+    "            \"entailment\": [],\n",
+    "            \"neutral\": [],\n",
+    "            \"contradiction\": []\n",
+    "        }\n",
+    "        \n",
+    "    premise2hypotheses[premise][label].append(hypothesis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_sup_train_example():\n",
+    "    \"\"\"\n",
+    "    教師ありSimCSEの訓練セットを生成する関数\n",
+    "    Returns:\n",
+    "        dict: 'premise', 'entailment_hypothesis', 'contradiction_hypothesis'をキーとする辞書\n",
+    "    \"\"\"\n",
+    "    # 結果を格納する辞書を初期化\n",
+    "    dataset_dict = {\n",
+    "        \"premise\": [],\n",
+    "        \"entailment_hypothesis\": [],\n",
+    "        \"contradiction_hypothesis\": []\n",
+    "    }\n",
+    "    \n",
+    "    # JSNLIのデータから三つ組を生成\n",
+    "    for premise, hypotheses in premise2hypotheses.items():\n",
+    "        # 「矛盾」ラベルの仮説文が存在しない場合はスキップ\n",
+    "        if len(hypotheses[\"contradiction\"]) == 0:\n",
+    "            continue\n",
+    "        \n",
+    "        # 「含意」ラベルの仮説文それぞれに対して処理\n",
+    "        for entailment_hypothesis in hypotheses[\"entailment\"]:\n",
+    "            # 「矛盾」ラベルの仮説文をランダムに選択\n",
+    "            contradiction_hypothesis = random.choice(hypotheses[\"contradiction\"])\n",
+    "            \n",
+    "            # 各要素をリストに追加\n",
+    "            dataset_dict[\"premise\"].append(premise)\n",
+    "            dataset_dict[\"entailment_hypothesis\"].append(entailment_hypothesis)\n",
+    "            dataset_dict[\"contradiction_hypothesis\"].append(contradiction_hypothesis)\n",
+    "    \n",
+    "    return dataset_dict\n",
+    "\n",
+    "# データセットの作成\n",
+    "try:\n",
+    "    dataset_dict = generate_sup_train_example()\n",
+    "    sup_train_dataset = Dataset.from_dict(dataset_dict)\n",
+    "except Exception as e:\n",
+    "    print(f\"エラーが発生しました: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset({\n",
+      "    features: ['premise', 'entailment_hypothesis', 'contradiction_hypothesis'],\n",
+      "    num_rows: 173438\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 訓練セットの形式と事例数を確認\n",
+    "print(sup_train_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'contradiction_hypothesis': '男 が 台所 の テーブル で 本 を 読んで い ます 。',\n",
+      " 'entailment_hypothesis': 'ガレージ に 男 が い ます 。',\n",
+      " 'premise': 'ガレージ で 、 壁 に ナイフ を 投げる 男 。'}\n",
+      "{'contradiction_hypothesis': '黒人 は デスクトップ コンピューター を 使用 し ます 。',\n",
+      " 'entailment_hypothesis': '人 は 椅子 に 座って い ます 。',\n",
+      " 'premise': 'ラップ トップ コンピューター を 使用 して 机 に 座って いる 若い 白人 男 。'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 訓練セットの内容を確認\n",
+    "pprint(sup_train_dataset[0])\n",
+    "pprint(sup_train_dataset[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### collate関数の準備"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import Tensor\n",
+    "from transformers import BatchEncoding\n",
+    "\n",
+    "def sup_train_collate_fn(\n",
+    "    examples: list[dict],\n",
+    ") -> dict[str, BatchEncoding | Tensor]:\n",
+    "    \"\"\"訓練セットのミニバッチを作成\"\"\"\n",
+    "    premises = []\n",
+    "    hypotheses = []\n",
+    "    \n",
+    "    for example in examples:\n",
+    "        premises.append(example[\"premise\"])\n",
+    "        \n",
+    "        entailment_hypotheis = example[\"entailment_hypothesis\"]\n",
+    "        contradiction_hypothesis = example[\"contradiction_hypothesis\"]\n",
+    "        \n",
+    "        hypotheses.extend(\n",
+    "            [entailment_hypotheis, contradiction_hypothesis]\n",
+    "        )\n",
+    "    # ミニバッチに含まれる前提文と仮説文にトークナイザを適用\n",
+    "    tokenized_premises = tokenizer(\n",
+    "        premises,\n",
+    "        padding=True,\n",
+    "        truncation=True,\n",
+    "        max_length=32,\n",
+    "        return_tensors=\"pt\",\n",
+    "    )\n",
+    "    tokenized_hypotheses = tokenizer(\n",
+    "        hypotheses,\n",
+    "        padding=True,\n",
+    "        truncation=True,\n",
+    "        max_length=32,\n",
+    "        return_tensors=\"pt\",\n",
+    "    )\n",
+    "    \n",
+    "    # 前提文と仮説文の類似度行列における正例ペアの位置を示すTensorを作成\n",
+    "    # 行列にi行目の事例（前提文）に対して\n",
+    "    # 2*i列目の要素（仮説文）が正例ペアとなる\n",
+    "    labels = torch.arange(0, 2 * len(premises), 2)\n",
+    "    \n",
+    "    return {\n",
+    "        \"tokenized_texts_1\": tokenized_premises,\n",
+    "        \"tokenized_texts_2\": tokenized_hypotheses,\n",
+    "        \"labels\": labels,\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### モデルの準備"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 教師ありSimCSEモデルを初期化\n",
+    "sup_model = SimCSEModel(base_model_name, mlp_only_train=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trainerの準備"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/transformers/training_args.py:1575: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 教師ありSimCSEに訓練のハイパーパラメータを設定\n",
+    "sup_training_args = TrainingArguments(\n",
+    "    output_dir=\"../model/outputs_sup_simcse\",\n",
+    "    per_device_train_batch_size=128,\n",
+    "    per_device_eval_batch_size=128,\n",
+    "    learning_rate=5e-5,\n",
+    "    num_train_epochs=3,\n",
+    "    evaluation_strategy=\"steps\",\n",
+    "    eval_steps=250,\n",
+    "    logging_steps=250,\n",
+    "    save_steps=250,\n",
+    "    save_total_limit=1,\n",
+    "    fp16=True,\n",
+    "    load_best_model_at_end=True,\n",
+    "    metric_for_best_model=\"spearman\",\n",
+    "    remove_unused_columns=False,\n",
+    "    report_to=\"none\",  # 外部ツールへのログを無効化\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 教師ありSimCSEのTrainerを初期化\n",
+    "sup_trainer = SimCSETrainer(\n",
+    "    model=sup_model,\n",
+    "    args=sup_training_args,\n",
+    "    data_collator=sup_train_collate_fn,\n",
+    "    train_dataset=sup_train_dataset,\n",
+    "    eval_dataset=valid_dataset,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 訓練の実行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='4065' max='4065' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [4065/4065 22:49, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Spearman</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>250</td>\n",
+       "      <td>1.438000</td>\n",
+       "      <td>2.782808</td>\n",
+       "      <td>0.791591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>500</td>\n",
+       "      <td>1.100000</td>\n",
+       "      <td>2.710751</td>\n",
+       "      <td>0.780901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>750</td>\n",
+       "      <td>1.017300</td>\n",
+       "      <td>2.759371</td>\n",
+       "      <td>0.786594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.967000</td>\n",
+       "      <td>2.818005</td>\n",
+       "      <td>0.788974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1250</td>\n",
+       "      <td>0.926100</td>\n",
+       "      <td>2.781399</td>\n",
+       "      <td>0.798985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1500</td>\n",
+       "      <td>0.828600</td>\n",
+       "      <td>2.828457</td>\n",
+       "      <td>0.792996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1750</td>\n",
+       "      <td>0.762300</td>\n",
+       "      <td>2.907998</td>\n",
+       "      <td>0.801895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.752000</td>\n",
+       "      <td>2.885943</td>\n",
+       "      <td>0.800020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2250</td>\n",
+       "      <td>0.743200</td>\n",
+       "      <td>2.904130</td>\n",
+       "      <td>0.793232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2500</td>\n",
+       "      <td>0.724700</td>\n",
+       "      <td>2.885217</td>\n",
+       "      <td>0.796730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2750</td>\n",
+       "      <td>0.703000</td>\n",
+       "      <td>2.924343</td>\n",
+       "      <td>0.800334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.620400</td>\n",
+       "      <td>2.915778</td>\n",
+       "      <td>0.800752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3250</td>\n",
+       "      <td>0.607600</td>\n",
+       "      <td>2.910745</td>\n",
+       "      <td>0.799712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3500</td>\n",
+       "      <td>0.625100</td>\n",
+       "      <td>2.924684</td>\n",
+       "      <td>0.801591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3750</td>\n",
+       "      <td>0.601500</td>\n",
+       "      <td>2.912793</td>\n",
+       "      <td>0.799567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4000</td>\n",
+       "      <td>0.595800</td>\n",
+       "      <td>2.912041</td>\n",
+       "      <td>0.800678</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=4065, training_loss=0.8097005076953846, metrics={'train_runtime': 1370.6597, 'train_samples_per_second': 379.608, 'train_steps_per_second': 2.966, 'total_flos': 0.0, 'train_loss': 0.8097005076953846, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 教師ありSimCSEの訓練を行う\n",
+    "sup_trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 性能評価"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='218' max='195' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [195/195 00:43]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 2.9079980850219727,\n",
+       " 'eval_spearman': 0.8018950489894365,\n",
+       " 'eval_runtime': 10.6323,\n",
+       " 'eval_samples_per_second': 1171.049,\n",
+       " 'eval_steps_per_second': 9.217,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 検証セットで教師ありSimCSEのモデル評価を行う\n",
+    "sup_trainer.evaluate(valid_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 2.628929376602173,\n",
+       " 'eval_spearman': 0.8184395733197469,\n",
+       " 'eval_runtime': 1.3935,\n",
+       " 'eval_samples_per_second': 1045.534,\n",
+       " 'eval_steps_per_second': 8.611,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# テストセットで教師ありSimCSEのモデル評価を行う\n",
+    "sup_trainer.evaluate(test_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
